Add numpy tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,12 @@
 [tox]
-envlist = docs, py{35,36,37}
+envlist = docs, py{35,36,37}{,-numpy}
 
 [testenv]
 passenv = EPICS_BASE EPICS_HOST_ARCH
-extras = test
+whitelist_externals = caget caput
+extras =
+    test
+    numpy: numpy
 commands =
     python -m pytest -v
 
