--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = docs, py{35,36,37}
 
 [testenv]
 passenv = EPICS_BASE EPICS_HOST_ARCH
+whitelist_externals = caget caput
 extras = test
 commands =
     python -m pytest -v
