Use local packages previously installed with tox when possible

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ setenv =
     !numpy: CA_WITH_NUMPY = 0
     numpy: CA_WITH_NUMPY = 1
 whitelist_externals = caget caput
+deps =
+    {distshare}/channel_access.common-*.zip
 extras =
     test
     numpy: numpy
